@@ -1,8 +1,10 @@
 package com.itss.vbas.service.impl;
 
+import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 import com.itss.vbas.dto.admin.AdminDto;
@@ -16,6 +18,7 @@ import com.itss.vbas.entity.RequestStatusHistory;
 import com.itss.vbas.entity.RescueCompany;
 import com.itss.vbas.entity.RescueRequest;
 import com.itss.vbas.entity.RescueStaff;
+import com.itss.vbas.entity.RescueVehicle;
 import com.itss.vbas.entity.Role;
 import com.itss.vbas.entity.ServiceType;
 import com.itss.vbas.entity.Address;
@@ -23,6 +26,7 @@ import com.itss.vbas.enums.AccountStatus;
 import com.itss.vbas.enums.AssignmentStatus;
 import com.itss.vbas.enums.CompanyStatus;
 import com.itss.vbas.enums.RescueRequestStatus;
+import com.itss.vbas.enums.RescueVehicleStatus;
 import com.itss.vbas.enums.RoleName;
 import com.itss.vbas.enums.StaffStatus;
 import com.itss.vbas.exception.BadRequestException;
@@ -35,12 +39,14 @@ import com.itss.vbas.repository.RequestStatusHistoryRepository;
 import com.itss.vbas.repository.RescueCompanyRepository;
 import com.itss.vbas.repository.RescueRequestRepository;
 import com.itss.vbas.repository.RescueStaffRepository;
+import com.itss.vbas.repository.RescueVehicleRepository;
 import com.itss.vbas.repository.RoleRepository;
 import com.itss.vbas.repository.ServiceTypeRepository;
 import com.itss.vbas.security.AuthContext;
 import com.itss.vbas.service.AddressService;
 import com.itss.vbas.service.AdminService;
 import com.itss.vbas.service.AssignmentTimeoutService;
+import com.itss.vbas.service.NotificationService;
 import com.itss.vbas.service.RequestSupportService;
 import com.itss.vbas.util.PasswordUtil;
 import org.springframework.stereotype.Service;
@@ -49,6 +55,14 @@ import org.springframework.transaction.annotation.Transactional;
 @Service
 @Transactional
 public class AdminServiceImpl implements AdminService {
+
+    private static final int AUTO_DISPATCH_STAFF_LIMIT = 5;
+    private static final double INITIAL_SEARCH_RADIUS_KM = 2.0;
+    private static final double SEARCH_RADIUS_GROWTH_KM_PER_SECOND = 0.5;
+    private static final List<AssignmentStatus> BUSY_ASSIGNMENT_STATUSES = List.of(
+            AssignmentStatus.PENDING,
+            AssignmentStatus.ACCEPTED
+    );
 
     private final AccountRepository accountRepository;
     private final RoleRepository roleRepository;
@@ -60,9 +74,11 @@ public class AdminServiceImpl implements AdminService {
     private final AddressService addressService;
     private final RequestSupportService requestSupportService;
     private final AssignmentTimeoutService assignmentTimeoutService;
+    private final NotificationService notificationService;
     private final AuthContext authContext;
     private final AppMapper appMapper;
     private final RescueStaffRepository rescueStaffRepository;
+    private final RescueVehicleRepository rescueVehicleRepository;
     private final RequestStatusHistoryRepository requestStatusHistoryRepository;
 
     public AdminServiceImpl(
@@ -72,12 +88,14 @@ public class AdminServiceImpl implements AdminService {
             ServiceTypeRepository serviceTypeRepository,
             RescueCompanyRepository rescueCompanyRepository,
             RescueStaffRepository rescueStaffRepository,
+            RescueVehicleRepository rescueVehicleRepository,
             RescueRequestRepository rescueRequestRepository,
             RequestAssignmentRepository requestAssignmentRepository,
             RequestStatusHistoryRepository requestStatusHistoryRepository,
             AddressService addressService,
             RequestSupportService requestSupportService,
             AssignmentTimeoutService assignmentTimeoutService,
+            NotificationService notificationService,
             AuthContext authContext,
             AppMapper appMapper
     ) {
@@ -87,12 +105,14 @@ public class AdminServiceImpl implements AdminService {
         this.serviceTypeRepository = serviceTypeRepository;
         this.rescueCompanyRepository = rescueCompanyRepository;
         this.rescueStaffRepository = rescueStaffRepository;
+        this.rescueVehicleRepository = rescueVehicleRepository;
         this.rescueRequestRepository = rescueRequestRepository;
         this.requestAssignmentRepository = requestAssignmentRepository;
         this.requestStatusHistoryRepository = requestStatusHistoryRepository;
         this.addressService = addressService;
         this.requestSupportService = requestSupportService;
         this.assignmentTimeoutService = assignmentTimeoutService;
+        this.notificationService = notificationService;
         this.authContext = authContext;
         this.appMapper = appMapper;
     }
@@ -378,6 +398,7 @@ public class AdminServiceImpl implements AdminService {
         RescueCompany company = findCompany(companyId);
         RescueStaff staff = RescueStaff.builder()
                 .company(company)
+                .vehicle(resolveAssignedVehicle(company.getId(), request.vehicleId(), null))
                 .jobTitle(request.jobTitle())
                 .yearsExperience(request.yearsExperience())
                 .bio(request.bio())
@@ -416,6 +437,7 @@ public class AdminServiceImpl implements AdminService {
         staff.setYearsExperience(request.yearsExperience());
         staff.setBio(request.bio());
         staff.setStatus(parseStaffStatus(request.status()));
+        staff.setVehicle(resolveAssignedVehicle(companyId, request.vehicleId(), staff.getId()));
         return appMapper.toStaffResponse(rescueStaffRepository.save(staff));
     }
 
@@ -463,14 +485,16 @@ public class AdminServiceImpl implements AdminService {
                 .request(rescueRequest)
                 .company(company)
                 .staff(staff)
+                .vehicle(requireAssignedVehicle(staff))
                 .assignedByUser(authContext.getCurrentAccount())
                 .status(AssignmentStatus.PENDING)
                 .build();
 
         RequestAssignment savedAssignment = requestAssignmentRepository.save(assignment);
+        notificationService.notifyAssignmentPending(savedAssignment);
 
         RescueRequestStatus oldStatus = rescueRequest.getStatus();
-        rescueRequest.setStatus(RescueRequestStatus.MATCHED);
+        rescueRequest.setStatus(RescueRequestStatus.SEARCHING);
         rescueRequestRepository.save(rescueRequest);
 
         String historyNote = defaultIfBlank(request.note(), 
@@ -479,7 +503,7 @@ public class AdminServiceImpl implements AdminService {
         requestStatusHistoryRepository.save(RequestStatusHistory.builder()
                 .request(rescueRequest)
                 .oldStatus(oldStatus)
-                .newStatus(RescueRequestStatus.MATCHED)
+                .newStatus(RescueRequestStatus.SEARCHING)
                 .changedByUser(authContext.getCurrentAccount())
                 .note(historyNote)
                 .build());
@@ -508,75 +532,123 @@ public class AdminServiceImpl implements AdminService {
                 .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy yêu cầu ID: " + requestId));
         Account assignedBy = findAccount(assignedByAccountId);
 
+        if (isDispatchClosed(rescueRequest)) {
+            return null;
+        }
+
+        RequestDto.AssignmentResponse existingAccepted = requestAssignmentRepository
+                .findFirstByRequestIdAndStatusOrderByAssignedAtDesc(requestId, AssignmentStatus.ACCEPTED)
+                .map(appMapper::toAssignmentResponse)
+                .orElse(null);
+        if (existingAccepted != null) {
+            return existingAccepted;
+        }
+
+        RequestDto.AssignmentResponse existingPending = requestAssignmentRepository
+                .findFirstByRequestIdAndStatusOrderByAssignedAtDesc(requestId, AssignmentStatus.PENDING)
+                .map(appMapper::toAssignmentResponse)
+                .orElse(null);
+        if (existingPending != null) {
+            return existingPending;
+        }
+
         if (rescueRequest.getLocation() == null || 
             rescueRequest.getLocation().getLatitude() == null || 
             rescueRequest.getLocation().getLongitude() == null) {
             throw new BadRequestException("Yêu cầu không có tọa độ GPS hợp lệ.");
         }
 
-        // Lấy danh sách ID nhân viên đã từng được gán cho ca này (để loại trừ)
         List<Long> previousStaffIds = requestAssignmentRepository.findByRequestId(requestId).stream()
-                .map(a -> a.getStaff().getId())
+                .map(RequestAssignment::getStaff)
+                .filter(Objects::nonNull)
+                .map(RescueStaff::getId)
                 .collect(Collectors.toList());
 
         double reqLat = rescueRequest.getLocation().getLatitude().doubleValue();
         double reqLng = rescueRequest.getLocation().getLongitude().doubleValue();
+        double radiusKm = calculateSearchRadiusKm(rescueRequest);
 
-        // Lọc nhân viên: ACTIVE và CHƯA TỪNG được gán cho yêu cầu này
-        List<RescueStaff> candidates = rescueStaffRepository.findAll().stream()
-                .filter(s -> s.getStatus() == StaffStatus.ACTIVE)
-                .filter(s -> !previousStaffIds.contains(s.getId()))
-                .collect(Collectors.toList());
+        List<StaffCandidate> candidates = rescueStaffRepository.findAll().stream()
+                .filter(staff -> staff.getStatus() == StaffStatus.ACTIVE)
+                .filter(staff -> staff.getUser() != null && staff.getUser().getDefaultAddress() != null)
+                .filter(staff -> staff.getVehicle() != null)
+                .filter(staff -> staff.getVehicle().getStatus() == RescueVehicleStatus.AVAILABLE)
+                .filter(staff -> !previousStaffIds.contains(staff.getId()))
+                .filter(staff -> !requestAssignmentRepository.existsByStaffIdAndStatusIn(staff.getId(), BUSY_ASSIGNMENT_STATUSES))
+                .map(staff -> toStaffCandidate(staff, reqLat, reqLng))
+                .filter(Objects::nonNull)
+                .filter(candidate -> candidate.distanceKm() <= radiusKm)
+                .sorted(Comparator.comparingDouble(StaffCandidate::distanceKm))
+                .limit(AUTO_DISPATCH_STAFF_LIMIT)
+                .toList();
 
-        RescueStaff nearestStaff = null;
-        double minDistance = Double.MAX_VALUE;
-
-        for (RescueStaff staff : candidates) {
-            Address staffAddr = staff.getUser().getDefaultAddress();
-            if (staffAddr != null && staffAddr.getLatitude() != null && staffAddr.getLongitude() != null) {
-                double staffLat = staffAddr.getLatitude().doubleValue();
-                double staffLng = staffAddr.getLongitude().doubleValue();
-
-                double distance = calculateDistance(reqLat, reqLng, staffLat, staffLng);
-                if (distance < minDistance) {
-                    minDistance = distance;
-                    nearestStaff = staff;
-                }
-            }
-        }
-
-        if (nearestStaff == null) {
-            // Không tìm thấy ai mới, chuyển request về trạng thái chờ tìm kiếm thủ công
+        if (candidates.isEmpty()) {
             rescueRequest.setStatus(RescueRequestStatus.SEARCHING);
             rescueRequestRepository.save(rescueRequest);
             return null;
         }
 
-        // Tạo bản ghi gán việc mới
-        RequestAssignment assignment = RequestAssignment.builder()
-                .request(rescueRequest)
-                .company(nearestStaff.getCompany())
-                .staff(nearestStaff)
-                .assignedByUser(assignedBy)
-                .status(AssignmentStatus.PENDING)
-                .assignedAt(LocalDateTime.now())
-                .build();
+        List<RequestAssignment> savedAssignments = candidates.stream()
+                .map(candidate -> RequestAssignment.builder()
+                        .request(rescueRequest)
+                        .company(candidate.staff().getCompany())
+                        .staff(candidate.staff())
+                        .vehicle(candidate.staff().getVehicle())
+                        .assignedByUser(assignedBy)
+                        .status(AssignmentStatus.PENDING)
+                        .assignedAt(LocalDateTime.now())
+                        .build())
+                .map(requestAssignmentRepository::save)
+                .toList();
 
-        RequestAssignment saved = requestAssignmentRepository.save(assignment);
+        savedAssignments.forEach(notificationService::notifyAssignmentPending);
 
         RescueRequestStatus oldStatus = rescueRequest.getStatus();
-        rescueRequest.setStatus(RescueRequestStatus.MATCHED);
+        rescueRequest.setStatus(RescueRequestStatus.SEARCHING);
         rescueRequestRepository.save(rescueRequest);
 
         requestStatusHistoryRepository.save(RequestStatusHistory.builder()
                 .request(rescueRequest)
                 .oldStatus(oldStatus)
-                .newStatus(RescueRequestStatus.MATCHED)
+                .newStatus(RescueRequestStatus.SEARCHING)
                 .changedByUser(assignedBy)
-                .note("Hệ thống tự động gán nhân viên gần nhất: " + nearestStaff.getUser().getFullName())
+                .note("System dispatched request to " + savedAssignments.size()
+                        + " nearby staff within " + String.format("%.1f", radiusKm) + " km.")
                 .build());
 
-        return appMapper.toAssignmentResponse(saved);
+        return appMapper.toAssignmentResponse(savedAssignments.get(0));
+    }
+
+    private boolean isDispatchClosed(RescueRequest request) {
+        return request.getStatus() == RescueRequestStatus.IN_PROGRESS
+                || request.getStatus() == RescueRequestStatus.COMPLETED
+                || request.getStatus() == RescueRequestStatus.CANCELED;
+    }
+
+    private StaffCandidate toStaffCandidate(RescueStaff staff, double requestLatitude, double requestLongitude) {
+        Address staffAddress = staff.getUser().getDefaultAddress();
+        if (staffAddress.getLatitude() == null || staffAddress.getLongitude() == null) {
+            return null;
+        }
+
+        double distanceKm = calculateDistance(
+                requestLatitude,
+                requestLongitude,
+                staffAddress.getLatitude().doubleValue(),
+                staffAddress.getLongitude().doubleValue()
+        );
+        return new StaffCandidate(staff, distanceKm);
+    }
+
+    private double calculateSearchRadiusKm(RescueRequest request) {
+        long elapsedSeconds = 0;
+        if (request.getCreatedAt() != null) {
+            elapsedSeconds = Math.max(0, Duration.between(request.getCreatedAt(), LocalDateTime.now()).toSeconds());
+        }
+        return INITIAL_SEARCH_RADIUS_KM + (SEARCH_RADIUS_GROWTH_KM_PER_SECOND * elapsedSeconds);
+    }
+
+    private record StaffCandidate(RescueStaff staff, double distanceKm) {
     }
 
     private double calculateDistance(double lat1, double lon1, double lat2, double lon2) {
@@ -645,6 +717,34 @@ public class AdminServiceImpl implements AdminService {
                 .status(AccountStatus.ACTIVE)
                 .role(getOrCreateRole(RoleName.RESCUE_STAFF))
                 .build());
+    }
+
+    private RescueVehicle resolveAssignedVehicle(Long companyId, Long vehicleId, Long currentStaffId) {
+        if (vehicleId == null) {
+            return null;
+        }
+
+        RescueVehicle vehicle = rescueVehicleRepository.findByIdAndCompanyId(vehicleId, companyId)
+                .orElseThrow(() -> new BadRequestException("Vehicle does not belong to the selected company"));
+
+        rescueStaffRepository.findByVehicleId(vehicleId)
+                .filter(existing -> currentStaffId == null || !existing.getId().equals(currentStaffId))
+                .ifPresent(existing -> {
+                    throw new BadRequestException("Vehicle is already assigned to another staff");
+                });
+
+        return vehicle;
+    }
+
+    private RescueVehicle requireAssignedVehicle(RescueStaff staff) {
+        RescueVehicle vehicle = staff.getVehicle();
+        if (vehicle == null) {
+            throw new BadRequestException("Staff must be assigned a rescue vehicle before dispatching");
+        }
+        if (vehicle.getStatus() != RescueVehicleStatus.AVAILABLE) {
+            throw new BadRequestException("Staff's assigned vehicle is not available");
+        }
+        return vehicle;
     }
 
     private RoleName parseRoleName(String value) {
